--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     
-    "start": "npx tsc index.ts"
+    "start": "npx tsc"
   },
   "author": "GerogiksonF",
   "license": "ISC",
