--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,19 @@
 {
     "compilerOptions": {
-        "sourceMap": true,
-        "module": "commonjs",
-        "esModuleInterop": true,
-        "resolveJsonModule": true,
-        "experimentalDecorators": true,
-        "target": "es5"
+      "module": "system",
+      "noImplicitAny": true,
+      "removeComments": true,
+      "preserveConstEnums": true,
+      "moduleResolution": "node",
+      "outFile": "dist/index.js",
+      "sourceMap": true,
+      "target": "es5",
     },
-    "files": ["index.ts"],
-    "compileOnSave": false
+    "include": [
+        "src/index.ts"
+    ],
+    "exclude": [
+        "node_modules", 
+        "dist"
+    ]
 }
