--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "chess on typescript",
   "main": "index.js",
   "scripts": {
-    
     "start": "npx tsc"
   },
   "author": "GerogiksonF",
   "license": "ISC",
   "dependencies": {
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "webpack": "^5.92.0",
+    "webpack-cli": "^5.1.4"
   }
 }
